# c_spinner

./: CMakeLists.txt  Makefile  README.md  project.json
include/: spinner.h
test/: test.c
